--- a/src/app/distributors/distributors.component.html
+++ b/src/app/distributors/distributors.component.html
@@ -846,7 +846,7 @@
                   <h6 style="color:gray;">17 Boulevard d'Italie, 98000 Monaco</h6>
                   <h6 style="color:gray; margin-top:60px;">Tél. +377 932 55 915</h6>
                   <h6><a style="color:gray" href="Mailto:monaco@eggersmann.fr" title="Envoyer un email">e-mail</a></h6>
-                  <h6><a style="color:gray" href="www.adbcuisines.com" target="_blank" title="Ouverture nouvelle fenêtre">Site Internet</a></h6>
+                  <h6><a style="color:gray" href="http://www.adbcuisines.com/" target="_blank" title="Ouverture nouvelle fenêtre">Site Internet</a></h6>
                   <h6 style="color:gray; margin-top:60px;font-weight: bold"> Ouverture du Showroom :</h6>
                   <p style="color:gray; margin-bottom:0px;"> Du lundi au vendredi : 09:00 - 12:00 / 14:00 - 18:00</p>
                   <p style="color:gray; margin-bottom:0px;"> Entre 12h et 14h uniquement sur rendez-vous</p>
