--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -18,7 +18,7 @@
   </div>
   <div class="row">
       <div class="col">
-          <div class="text-center" style="color:gray; padding-bottom:10px; font-size: 15px;">© 2018 Copyright: Eggersmann-france.com
+          <div class="text-center" style="color:gray; padding-bottom:10px; font-size: 15px;">© 2018 Copyright: eggersmann-france.com
           </div>
   </div>
 </div>
