added animations (AOS)

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,7 +5,7 @@
 </div>
   <div class="row">
     <div class="col centered">
-        <div style="text-align: center; padding-top:30px; padding-bottom: 30px">
+        <div style="text-align: center; padding-top:30px; padding-bottom: 30px" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-delay="200" data-aos-duration="1200" data-aos-once="true">
             <a href="https://www.facebook.com/eggersmann.unique/" class="fa fa-facebook" [ngClass]="{'fa-bg-dark':this.navigationService.isIn(['home', 'unique', 'distributors', 'contact', 'works']), 'fa-bg-light':this.navigationService.isIn(['e30', 'lookbook'])}"></a>
         </div>
     </div>
