--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,9 +10,9 @@
     <div class="black-filter"></div>
   </div>
 
-  <div class="carousel-title"> eggersmann, Welcome to the Kitchen </div>
+  <div class="carousel-title" data-aos="fade-up" data-aos-once="true" data-aos-duration="1200"> eggersmann, Welcome to the Kitchen </div>
 
-<div class="container img-txt">
+<div class="container img-txt" data-aos="fade-up" data-aos-once="true" data-aos-delay="300" data-aos-duration="1200">
   <div class="row">
     <div class="col" style="margin:auto;">
        <div class="txt-left">
@@ -28,7 +28,7 @@
 </div>
 
 <div class="container-fluid" style="background-color: black">
-  <div id="white-text-container" class="container" style="color:white;font-size:35px;font-weight: bold;text-align: center">
+  <div id="white-text-container" class="container" style="color:white;font-size:35px;font-weight: bold;text-align: center" data-aos="fade-up" data-aos-once="true" data-aos-offset="100" data-aos-duration="1200">
     <p id="white-text" style="margin-bottom:40px;">Faire du sur-mesure le standard d’aujourd’hui…</p>
     <p id="white-text" style="margin-bottom:40px;">Et si votre projet de cuisine s’affranchissait des règles conventionnelles pour finalement répondre à vos attentes plus qu’à celle d’un industriel ?</p>
     <p id="white-text">"eggersmann, Welcome to the Kitchen"</p>
@@ -36,7 +36,7 @@
   </div>
 </div>
 
-<div class="container img-txt">
+<div class="container img-txt" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="1200">
     <div class="row">
       <div class="col" style="margin:auto;">
           <img class="img-left" src="../../assets/images/1.jpg">
@@ -56,7 +56,7 @@
     </div>
   </div>
 
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="1200">
     <div class="carousel-inner no-fixed-height" role="listbox" style="margin-bottom:110px !important;">
       <div class="carousel-item active">
         <img class="img-carousel" src="../../assets/images/lookbook/seaside-resort/seaside_01.jpg" alt="First slide">
