--- a/src/app/works/works.component.html
+++ b/src/app/works/works.component.html
@@ -1,14 +1,14 @@
 <div class="container-fluid gallery-container" style="background-color:#232323;">
   <div class="container-fluid" style="margin:0px auto 130px auto;">
-    <div class="container-fluid" style="text-align:center;">
+    <div class="container-fluid" style="text-align:center;" data-aos="fade-up" data-aos-once="true" data-aos-duration="1200">
       <img style="margin-bottom:50px;padding-top:150px;" src="../../assets/images/works/works-logo.png" />
     </div>
 
-    <p class="page-description" style="color:white;">{{this.languagesService.worksIntro}}</p>
+    <p class="page-description" style="color:white;" data-aos="fade-up" data-aos-once="true" data-aos-delay="200" data-aos-duration="1200">{{this.languagesService.worksIntro}}</p>
 
   </div>
 
-    <div class="tz-gallery">
+    <div class="tz-gallery" data-aos="fade-up" data-aos-once="true" data-aos-delay="400" data-aos-duration="1200">
 
           <div class="row">
             <div class="col-sm-6 col-md-4">
