--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,5 @@
 <div class="contact-container">
-  <div class="temporary-announcement">
+  <div class="temporary-announcement" data-aos="fade-up" data-aos-once="true" data-aos-duration="1200">
     Bientôt...
   </div>
 </div>
