--- a/src/app/distributors/distributors.component.html
+++ b/src/app/distributors/distributors.component.html
@@ -1,11 +1,12 @@
 <div class="container-fluid gallery-container">
   <div class="container-fluid" style="margin:0px auto 130px auto;">
-    <h1 style="margin-bottom:50px;">Distributeurs</h1>
-    <p class="page-description">Sélectionnés pour leurs capacités et compétences, ces partenaires eggersmann sauront mettre en œuvre votre projet de cuisine et d’agencement de votre intérieur sans suivre des voies conventionnelles. C’est leur créativité associée aux combinaisons infinies de la capacité de réalisation et production de la marque eggersmann qui feront de votre projet, une œuvre unique.
+    <h1 style="margin-bottom:50px;" data-aos="fade-up" data-aos-once="true" data-aos-duration="1200">Distributeurs</h1>
+    <p class="page-description" data-aos="fade-up" data-aos-once="true" data-aos-delay="200" data-aos-duration="1200">Sélectionnés pour leurs capacités et compétences, ces partenaires eggersmann sauront mettre en œuvre votre projet de cuisine et d’agencement de votre intérieur sans suivre des voies conventionnelles. C’est leur créativité associée aux combinaisons infinies de la capacité de réalisation et production de la marque eggersmann qui feront de votre projet, une œuvre unique.
       Sollicitez-les, une rencontre avec un partenaire eggersmann ne laisse jamais un client indifférent face aux propositions qui lui sont présentées.</p>
   </div>
 </div>
 
+<div data-aos="fade-up" data-aos-once="true" data-aos-delay="400" data-aos-duration="1200">
 <div class="row first-row-container">
   <div class="col-sm-12 col-md-7">
     <div class="france-map" id="france-map">
@@ -168,6 +169,7 @@
           </div>
         </div>
     </div>
+  </div>
 
 <div class="all-dropdown-content">
     <div class="col-xs-12 col-md-12">
