--- a/src/app/lookbook/lookbook.component.html
+++ b/src/app/lookbook/lookbook.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluid gallery-container">
   <div class="container-fluid" style="margin:0px auto 130px auto;">
-    <h1 style="margin-bottom:50px;">Lookbook</h1>
+    <h1 style="margin-bottom:50px;" data-aos="fade-up" data-aos-once="true" data-aos-duration="1200">Lookbook</h1>
 
-    <p class="page-description">{{this.languagesService.lookbookIntro}}</p>
+    <p class="page-description" data-aos="fade-up" data-aos-once="true" data-aos-delay="200" data-aos-duration="1200">{{this.languagesService.lookbookIntro}}</p>
 
   </div>
 
-    <div class="tz-gallery">
+    <div class="tz-gallery" data-aos="fade-up" data-aos-once="true" data-aos-delay="400" data-aos-duration="1200">
 
           <div class="row">
             <div class="col-sm-6 col-md-4">
