--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -1,15 +1,286 @@
-.contact-container{
+.contact-outer {
+  display: table;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
   background-image: url('../../assets/images/contact.jpg');
-  min-height: 1500px;
   background-size:cover;
   background-position: center center;
 }
 
-.temporary-announcement {
-  font-family: 'Brandon_light', Arial, Verdana;
-  font-size: 70px;
-  color: white;
+.contact-middle {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.contact-inner {
+  margin-left: auto;
+  margin-right: auto;
+  height:75%;
+  margin-top:60px;
+}
+
+.black-box-container {
+  position: fixed;
+  left: 0;
+  right: 0;
+  background-color: rgba(0,0,0,0.7);
+  width: 80%;
+  height: 75%;
+  margin:auto;
+}
+
+.pannel-outer {
+  display: table;
+  position: relative;
+  top: 0;
+  left: 0;
+  height: 100%;
   width: 100%;
-  text-align:center;
-  padding-top:300px;
+}
+
+.back-button-container {
+  position:absolute;
+}
+
+.back-button-container:hover {
+  cursor: pointer;
+}
+
+.back-button-icon {
+  position: relative;
+  top: 19px;
+  left: 8px;
+  color:white;
+}
+
+.back-button-icon:hover {
+  cursor: pointer;
+}
+
+.back-button-text {
+  color:white;
+  font-family: 'Brandon_light', Arial, Verdana;
+  font-size: 20px;
+  position: relative;
+  top: 14px;
+  left: 10px;
+}
+
+.back-button-text:hover {
+  cursor: pointer;
+}
+
+.pannel-middle {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.pannel-visible {
+  visibility: visible;
+  opacity: 1;
+  transition: visibility 0s linear 300ms, opacity 300ms;
+}
+
+.pannel-hidden {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s linear 300ms, opacity 300ms;
+}
+
+.contact-title {
+  color:white;
+  font-family: 'Brandon_light', Arial, Verdana;
+  font-size: 55px;
+  text-align: center;
+  margin-bottom: 65px;
+}
+
+.opt-container {
+  cursor:pointer;
+  font-family: 'Brandon_light', Arial, Verdana;
+  font-size: 25px;
+  color: white;
+  width:70%;
+  padding: 20px;
+  margin:auto;
+  text-align: justify;
+  outline: 1px solid white;
+  margin-bottom:45px;
+  transition: all 0.3s !important;
+}
+
+.opt-container:hover {
+  background-color: white;
+  color: black;
+}
+
+.other-opt {
+  cursor:pointer;
+  font-family: 'Brandon_light', Arial, Verdana;
+  font-size: 20px;
+  color: white;
+  text-align: center;
+  margin:auto;
+}
+
+.before-opt {
+  width:70%;
+  cursor:pointer;
+  font-family: 'Brandon_light', Arial, Verdana;
+  font-size: 25px;
+  color: white;
+  margin:auto;
+  padding-bottom:30px;
+}
+
+.contact-fields-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.pre-form-title {
+  font-family: 'Brandon_light', Arial, Verdana;
+  font-size: 27px;
+  color: white;
+  padding-bottom:50px;
+  text-align: justify;
+  width: 85%;
+  margin:auto;
+}
+
+.centered-field {
+  margin:auto;
+}
+
+.next-button {
+  margin-top: 30px;
+  color:white;
+  font-family: 'Brandon_light', Arial, Verdana;
+  font-size: 20px;
+  text-align: center;
+}
+
+.btn-outline-light {
+  font-size:20px;
+  border-radius: 0;
+}
+
+.thanks-title {
+  color:white;
+  font-family: 'Brandon_light', Arial, Verdana;
+  font-size: 55px;
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+.thanks-description {
+  color:white;
+  font-family: 'Brandon_light', Arial, Verdana;
+  font-size: 26px;
+  text-align: center;
+}
+
+.select-title {
+  color:white;
+  font-family: 'Brandon_light', Arial, Verdana;
+  font-size: 32px;
+  text-align: center;
+  margin-bottom: 35px;
+}
+
+.showroom-select {
+  width: 180px;
+}
+
+.payment-title {
+  width: 75%;
+  text-align: justify;
+  margin: auto;
+  margin-bottom: 50px;
+  color:white;
+  font-family: 'Brandon_light', Arial, Verdana;
+  font-size: 27px;
+}
+
+.payment-information {
+  text-align: center;
+  color:white;
+  font-family: 'Brandon_light', Arial, Verdana;
+  font-size: 22px;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+input.example-right-align::-webkit-outer-spin-button,
+input.example-right-align::-webkit-inner-spin-button {
+  display: none;
+}
+
+@media screen and (max-width: 767px) {
+  .contact-outer {
+    display: initial;
+    width:100%;
+    min-height:1058px;
+  }
+  .contact-middle {
+    display: initial;
+  }
+  .pannel-middle {
+    display:initial;
+  }
+  .pannel-visible {
+    margin-top:150px;
+  }
+  .black-box-container {
+    position: initial;
+    width:100%;
+    height: 100%;
+  }
+  .contact-inner {
+    margin-top: 0;
+    height:100%;
+  }
+  .contact-title {
+    font-size: 38px;
+    margin-bottom: 48px;
+  }
+  .opt-container {
+    width:90%;
+    font-size: 16px;
+  }
+  .pre-form-title {
+    width:90%;
+    font-size:20px;
+  }
+  .row {
+    margin-left: 0;
+    margin-right:0;
+  }
+  .thanks-description {
+    font-size: 22px;
+    margin: auto;
+    width: 80%;
+  }
+  .payment-title {
+    width: 90%;
+    font-size: 22px;
+  }
+  .back-button-container {
+    top: 72px;
+    left:5px;
+  }
+  .pre-form-title {
+    padding-bottom: 20px;
+  }
+  .select-title {
+    font-size: 22px;
+  }
+  .before-opt {
+    width:90%;
+    font-size: 22px;
+    padding-bottom:30px;
+  }
 }
