--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -29,7 +29,7 @@
   </div>
 </div>
 
-<div class="container-fluid" style="background-color: black">
+<div class="container-fluid" data-aos="fade-in" data-aos-once="true" data-aos-duration="1200" style="background-color: black">
   <div id="white-text-container" class="container" style="color:white;font-size:35px;font-weight: bold;text-align: center" data-aos="fade-up" data-aos-once="true" data-aos-offset="100" data-aos-duration="1200">
     <p id="white-text" style="margin-bottom:40px;">Faire du sur-mesure le standard d’aujourd’hui…</p>
     <p id="white-text" style="margin-bottom:40px;">Et si votre projet de cuisine s’affranchissait des règles conventionnelles pour finalement répondre à vos attentes plus qu’à celle d’un industriel ?</p>
