--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,13 +1,38 @@
-<div class="contact-outer">
+<div class="contact-container">
+<div class="contact-outer" data-aos="fade-in" data-aos-once="true" data-aos-duration="1200">
     <div class="contact-middle">
       <div class="contact-inner">
           <div class="black-box-container" data-aos="fade-up" data-aos-once="true" data-aos-duration="1200">
             <div class="pannel-outer">
-                <div *ngIf="this.pannel !== 1" class="back-button-container" (click)="back()" data-aos="fade" data-aos-once="true" data-aos-duration="1200">
+                <div *ngIf="(this.pannel !== 1) && (this.pannel !== 0)" class="back-button-container" (click)="back()" data-aos="fade" data-aos-once="true" data-aos-duration="1200">
                     <i class="material-icons back-button-icon" style="font-size:23px;">navigate_before</i>
                     <span class="back-button-text">Retour</span>
                 </div>
               <div class="pannel-middle">
+                  <!-- PANNEL 0 -->
+                  <div [ngClass]="this.pannel == 0 ? 'pannel-visible' : 'pannel-hidden'" *ngIf="this.pannel == 0">
+                  <div class="pannel-0" [ngClass]="this.pannel == 0 ? 'pannel-visible' : 'pannel-hidden'" *ngIf="this.pannel == 0">
+                    <div data-aos="fade-up" data-aos-once="true" data-aos-duration="1200">
+                      <div class="contact-title">
+                          Contactez-nous
+                      </div>
+                    </div>
+                  </div>
+                  <div data-aos="fade-up" data-aos-once="true" data-aos-duration="1200" data-aos-delay="200">
+                      <div class="send-email-container">
+                          <a class="send-email-text" href="Mailto:contact@eggersmann.fr">
+                              Envoyer un e-mail
+                          </a>
+                      </div>
+                  </div>
+                  <div data-aos="fade-up" data-aos-once="true" data-aos-duration="1200" data-aos-delay="200" style="display:none;">
+                    <div class="send-email-container">
+                        <a class="send-email-text" (click)="goToPannel(3, 'pannel1Option1')">
+                            Envoyer un e-mail
+                        </a>
+                    </div>
+                </div>
+                </div>
                   <!-- PANNEL 1 -->
                   <div class="pannel-1" [ngClass]="this.pannel == 1 ? 'pannel-visible' : 'pannel-hidden'" *ngIf="this.pannel == 1">
                     <div data-aos="fade-up" data-aos-once="true" data-aos-duration="1200">
@@ -89,7 +114,7 @@
                           </form>
                           <div data-aos="fade-up" data-aos-once="true" data-aos-duration="1200" data-aos-delay="400" *ngIf="this.innerWidth > 767">
                               <div class="next-button">
-                                  <button type="button" class="btn btn-outline-light" (click)="this.formGroup.valid ? (this.pannel3Option2 ? goToPannel(5) : goToPannel(6)) : null">Suivant</button>
+                                  <button type="button" class="btn btn-outline-light" (click)="this.formGroup.valid ? sendEmail() : null">Suivant</button>
                               </div>
                           </div>
                       </div>
@@ -172,3 +197,4 @@
       </div>
     </div>
   </div>
+</div>
