--- a/src/app/distributors/distributors.component.html
+++ b/src/app/distributors/distributors.component.html
@@ -673,7 +673,7 @@
             <div class="right-text-expansion">
               <h3 style="color:gray;font-weight: bold;">Premium Conception</h3>
               <h6 style="color:gray;">3 impasse du Merle Blanc, 34000 Montpellier</h6>
-              <h6 style="color:gray; margin-top:60px;">Tél. ‭+33 4 67 86 68 16‬</h6>
+              <h6 style="color:gray; margin-top:60px;">Tél. ‭+33 6 68 79 95 66</h6>
               <h6><a style="color:gray" href="Mailto:montpellier@eggersmann.fr" title="Envoyer un email">e-mail</a></h6>
               <h6><a style="color:gray" href="http://www.premiumconception.com" target="_blank" title="Ouverture nouvelle fenêtre">Site Internet</a></h6>
               <h6 style="color:gray; margin-top:60px;font-weight: bold"> Ouverture du Showroom :</h6>
