--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -58,7 +58,7 @@
     </div>
   </div>
 
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="1200">
+<div id="carouselExampleControls" class="carousel secondary-carousel slide" data-ride="carousel" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="1200">
     <div class="carousel-inner no-fixed-height" role="listbox" style="margin-bottom:110px !important;">
       <div class="carousel-item active">
         <img class="img-carousel" src="../../assets/images/lookbook/seaside-resort/seaside_01.jpg" alt="First slide">
